text placement fixed

--- a/index.html
+++ b/index.html
@@ -38,19 +38,29 @@
     section.hero {
       display: flex;
       flex-wrap: wrap;
-      align-items: center;
-      justify-content: center;
+      align-items: flex-start; /* Align items to the top */
+      justify-content: flex-start; /* Align items to the left */
       height: calc(100vh - 80px);
       padding: 2rem;
       box-sizing: border-box;
+      /* Removed text centering so content aligns left */
     }
 
     section.hero article {
       max-width: 600px;
       font-family: Georgia, serif;
-      background: rgba(0, 0, 0, 0.5);
-      padding: 1.5rem;
-      border-radius: 10px;
+      /* Removed background, padding, and border-radius to remove the box around the headline */
+      /* background: rgba(0, 0, 0, 0.5); */
+      /* padding: 1.5rem; */
+      /* border-radius: 10px; */
+      text-align: left; /* Align text to the left */
+    }
+
+    /* Make the main headline much bigger for emphasis */
+    .hero h1 {
+      font-size: 3em; /* Increase the size of the h1 text */
+      margin-bottom: 0.7em; /* Add some space below the headline */
+      text-align: left; /* Make sure the headline is left-aligned */
     }
 
     .cta-button {
