--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 
     /* Make the main headline much bigger for emphasis */
     .hero h1 {
-      font-size: 3em; /* Increase the size of the h1 text */
+      font-size: 4em; /* Increase the size of the h1 text */
       margin-bottom: 0.7em; /* Add some space below the headline */
       text-align: left; /* Make sure the headline is left-aligned */
     }
 
     .cta-button {
-      background-color: #0033cc;
+      background-color: #8BD1CB; /* Changed button color to light blue */
       color: white;
       padding: 0.8rem 1.5rem;
       border: none;
