--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     }
 
     .cta-button {
-      background-color: #8BD1CB;
+      background-color: #2E9DF7CB;
       color: white;
       padding: 0.8rem 1.5rem;
       border: none;
@@ -91,6 +91,7 @@
       text-decoration: none;
       display: inline-block;
       transition: background-color 0.3s ease;
+      margin-left: 20rem; /*  Add this line to move it right */
     }
 
     .cta-button:hover {
@@ -164,7 +165,10 @@
   <section class="hero">
     <article>
       <h1>Give Clean Water. See Real Change.</h1>
-      <p>100% of your donation funds clean water projects – one click and you'll see exactly where your gift is changing lives.</p>
+      <p>
+        100% of your donation funds clean water projects – one click and<br>
+        you'll see exactly where your gift is changing lives.
+      </p>
       <a class="cta-button" href="#">Click now to change a life</a>
     </article>
   </section>
